fixed grid alignment

--- a/src/components/LaunchCard/LaunchCard.css
+++ b/src/components/LaunchCard/LaunchCard.css
@@ -3,6 +3,11 @@
   width: 100% !important;
 }
 
+.grid-item {
+  align-self: stretch;
+  width: inherit;
+}
+
 .card {
   min-width: 350px;
   max-width: 400px;
